解决热更新慢问题

--- a/src/style/element/index.scss
+++ b/src/style/element/index.scss
@@ -39,10 +39,10 @@ $--table-border: 1px solid#dfe6ec;
 //     $colors: $--colors,
 //     $button-padding-horizontal: ("default": 50px)
 //   );
-@import 'tailwindcss/base';
+// @import 'tailwindcss/base';
 
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+// @import 'tailwindcss/components';
+// @import 'tailwindcss/utilities';
 
 
 @import "element-plus/theme-chalk/src/index.scss";
